--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@octokit/rest": "^20.0.2",
+    "axios": "^1.6.1",
+    "cheerio": "^1.0.0-rc.12",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.3.1",
